# azure-pdf-parser

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: code-quality.yml  pre-commit.yml  tag.yml  test.yml
.trunk/: configure-pyright.sh  trunk.yaml
.trunk/configs/: bandit.yaml  ruff.toml
docs/: database-containers.md
scripts/: parse_docs_for_unece_sprint.py
scripts/sampling_for_sectors_classifier/: README.md  check_that_docs_can_be_loaded_as_huggingface.py  parse_docs.py
scripts/unece_sprint/: README.md  check_parsed_docs.py  parse_docs.py
src/: cli.py  main.py
src/azure_api_wrapper/: __init__.py  azure_wrapper.py  base.py  convert.py  utils.py
src/azure_api_wrapper/tests/: conftest.py  helpers.py  test_azure_wrapper.py  test_convert.py  test_helpers.py  test_utils.py
src/azure_api_wrapper/tests/data/: document-table.json
src/azure_pdf_parser/: __init__.py  azure_wrapper.py  base.py  convert.py  experimental_base.py  run.py  utils.py
src/azure_pdf_parser/tests/: conftest.py  test_azure_wrapper.py  test_convert.py  test_helpers.py  test_utils.py
src/azure_pdf_parser/tests/data/: document-paragraph.json
src/cpr_pdf_parser/: base.py  convert.py  cpr_pdf_parser.py  experimental_base.py  main.py
src/cpr_pdf_parser/tests/: conftest.py  helpers.py  test_convert.py
tests/: conftest.py  helpers.py  test_api.py  test_azure_wrapper.py  test_cli.py  test_convert.py  test_helpers.py  test_utils.py
tests/data/: document-paragraph.json  document-table.json  sample-one-page.json  sample-sixteen-page.json
writeup/: README.md
