[tool.poetry]
name = "azure-pdf-parser"
version = "0.1.0"
description = ""
authors = ["CPR-tech-team <tech@climatepolicyradar.org>"]
packages = [{ include = "azure_pdf_parser", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
azure-ai-formrecognizer = "^3.2.1"
cpr-data-access = { git = "https://github.com/climatepolicyradar/data-access.git", tag = "0.4.0" }
requests = "^2.31.0"
langdetect = "^1.0.9"
pypdf = "^3.15.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.247"
black = "^22.1.0"
pyright = "^1.1.267"
pre-commit = "^2.17.0"
python-dotenv = "^0.19.2"
pytest = "^7.0.1"
pytest-dotenv = "^0.5.2"
nbmake = "^1.4.1"
httpx = "^0.23.3"
mock = "^5.1.0"


[tool.poetry.group.cli.dependencies]
click = "^8.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
env_files = """
    .env.test
    .env
"""
markers = ["search", "unit"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.9"
